Adapt scalafmt to handle Scala3 sourcesand run scalafmt

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,6 +9,8 @@ project.git = true
 project.excludePaths = [
   "glob:**/scalalib/**"
 ]
+# Default runner.dialect is deprecated now, needs to be explicitly set
+runner.dialect = scala213
 # This creates less of a diff but is not default
 # but is more aligned with Scala.js syntax.
 newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
@@ -24,4 +26,9 @@ rewriteTokens = {
   "⇒": "=>"
   "→": "->"
   "←": "<-"
+}
+fileOverride {
+  "glob:**/src/**/scala-3/**" {
+     runner.dialect = scala3
+  }
 }
