Add testing javalib and scalalib compilation in the CI

--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -297,3 +297,5 @@ jobs:
           posixlib3/compile
           windowslib3/compile
           auxlib3/compile
+          javalib3/compile
+          scalalib3/compile
