Ensure Scala 3 source-compatibility for testing infrastructure (#2459)
* Allow compile test-interface/runner with Scala 3

* Allow to compile test-interface-sbt-defs with Scala 3

* Allow to compile testing compielr with Scala 3

* Allow compile tools tests with Scala 3

* Add Scala 3 test interface source not dependedn on javalib to CI

* Ensure junit runtime can be compiled with Scala 3

* Add additional projects to tests sources

--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -294,8 +294,14 @@ jobs:
           "-no-colors" 
           "-J-Xmx3G" 
           tools3/compile
+          tools3/Test/compile
           posixlib3/compile
           windowslib3/compile
           auxlib3/compile
           javalib3/compile
           scalalib3/compile
+          testRunner3/test
+          junitRuntime3/compile
+          testInterfaceSbtDefs3/compile
+          testInterface3/compile
+          testingCompiler3/compile
