--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -286,33 +286,10 @@ jobs:
         with:
           scala-version: ${{matrix.scala}}
 
-        # Ensure that our codebase is source compatible with Scala 3
-        # Skip transitive dependencies in the build
-      - name: Compile sources with Scala 3
-        run: >
-          sbt "++ ${{ matrix.scala }} -v" 
-          "-no-colors" 
-          "-J-Xmx3G" 
-          nscplugin3/compile
-          tools3/compile
-          tools3/Test/compile
-          posixlib3/compile
-          windowslib3/compile
-          auxlib3/compile
-          javalib3/compile
-          scalalib3/compile
-          junitRuntime3/compile
-          testInterfaceSbtDefs3/compile
-          testInterface3/compile
-          testingCompiler3/compile
-
-      - name: Run Scala 3 tsts
+      - name: Run Scala 3 tests
         run: >
           sbt "++ ${{ matrix.scala }} -v"
           "-no-colors"
           "-J-Xmx3G"
-          tools3/test
-          testRunner3/test
-          testsJVM3/test
-          testsExtJVM3/test
-          sandbox3/run
+          "test-tools 3"
+          "test-runtime 3"
