--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -57,68 +57,12 @@ jobs:
           "-J-Xmx3G" \
           "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
 
-  # Build testing image that would be used to build and run against different platforms
-  # Currently only Linux x64 is tested
-  build-image:
-    name: Build image
-    runs-on: ubuntu-18.04
-    outputs:
-      image-name: ${{ steps.build-image.outputs.image-base-name }}
-    strategy:
-      matrix:
-        arch: [amd64]
-
-    steps:
-      - uses: actions/checkout@v2
-      # In order to minimize time spend in image build loading we're caching directory of local repository
-      # Starting local registry from cache is faster then loading image tars
-      # https://dev.to/dtinth/caching-docker-builds-in-github-actions-which-approach-is-the-fastest-a-research-18ei
-      # This and next stage (start registry) should be used in every step using built images
-      # Images are cached based on content of Dockerfile
-
-      # Cache automatically saves content specified paths after executing all steps defined after this one.
-      # It will not update cache on hit.
-      - name: Cache docker
-        id: cache
-        uses: actions/cache@v1
-        with:
-          path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
-      - name: Run local image registry
-        run: docker run -d -p 5000:5000 --restart=always --name registry -v /tmp/docker-registry:/var/lib/registry registry:2 && npx wait-on tcp:5000
-
-      # Builds images and saves image base name in output - it allows to re-use it in other steps.
-      - name: Build image
-        id: build-image
-        run: |
-          imageBase="scala-native-testing:linux"
-          imageName="${imageBase}-${{ matrix.arch }}"
-          echo "::set-output name=image-base-name::${imageBase}"
-          echo "::set-output name=image-full-name::${imageName}"
-
-          docker run --rm --privileged multiarch/qemu-user-static:register
-          docker pull localhost:5000/${imageName} || true
-          docker build \
-          -t ${imageName} \
-          --cache-from=localhost:5000/${imageName} \
-          --build-arg TARGET_DOCKER_PLATFORM=library \
-          --build-arg HOST_ARCHITECTURE=${{ matrix.arch }}  \
-          --cpuset-cpus=0 \
-          ci-docker
-
-      - name: Store image in cache
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          imageName=${{ steps.build-image.outputs.image-full-name }}
-          docker tag $imageName localhost:5000/${imageName} && \
-          docker push localhost:5000/${imageName}
-
   #Main tests grid. Builds and runs tests agains multiple combination of GC, Build mode and Scala Version
   #It can be extended to test against different OS and Arch settings
   test-runtime:
     name: Test runtime
     runs-on: ubuntu-18.04
-    needs: [tests-tools, build-image]
+    needs: tests-tools
     strategy:
       fail-fast: false
       matrix:
@@ -179,16 +123,14 @@ jobs:
           SCALANATIVE_MODE: ${{ matrix.build-mode }}
           SCALANATIVE_GC: ${{ matrix.gc }}
           SCALANATIVE_OPTIMIZE: true
-          SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: sbt "test-runtime ${{ matrix.scala }}"
 
   # This job is basically copy-paste of test-runtime.
   # Main difference is disabled optimization and fixed Immix GC
   test-runtime-no-opt:
     name: Test runtime no-opt
     runs-on: ubuntu-18.04
-    needs: [tests-tools, build-image]
+    needs: tests-tools
     strategy:
       fail-fast: false
       matrix:
@@ -214,14 +156,12 @@ jobs:
           SCALANATIVE_MODE: ${{ matrix.build-mode }}
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: false
-          SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: sbt "test-runtime ${{ matrix.scala }}"
 
   test-runtime-lto:
     name: Test runtime LTO
     runs-on: ubuntu-18.04
-    needs: [tests-tools, build-image]
+    needs: tests-tools
     strategy:
       fail-fast: false
       matrix:
@@ -252,16 +192,13 @@ jobs:
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: ${{matrix.optimize}}
           SCALANATIVE_LTO: ${{matrix.lto}}
-          SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: sbt "test-runtime ${{ matrix.scala }}"
 
   # This job is basically copy-paste of test-runtime.
   # Scripted tests take a long time to run, ~30 minutes, and should be limited and absolute minimum.
   test-scripted:
     name: Test scripted
     runs-on: ubuntu-18.04
-    needs: [tests-tools, build-image]
     strategy:
       fail-fast: false
       matrix:
@@ -277,6 +214,4 @@ jobs:
           SCALANATIVE_MODE: release-fast
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: true
-          SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: "test-scripted ${{matrix.scala}}"
-        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+        run: sbt "test-scripted ${{matrix.scala}}"
