--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -31,11 +31,10 @@ jobs:
       # Cache automatically saves content specified paths after executing all steps defined after this one.
       # It will not update cache on hit.
       - name: Cache docker
-        id: cache
         uses: actions/cache@v1
         with:
           path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
+          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}-${{ matrix.arch }}
       - name: Run local image registry
         run: docker run -d -p 5000:5000 --restart=always --name registry -v /tmp/docker-registry:/var/lib/registry registry:2 && npx wait-on tcp:5000
 
@@ -53,8 +52,8 @@ jobs:
           docker build \
           -t ${imageName} \
           --cache-from=localhost:5000/${imageName} \
-          --build-arg TARGET_DOCKER_PLATFORM=library \
-          --build-arg HOST_ARCHITECTURE=${{ matrix.arch }}  \
+          --build-arg TARGET_DOCKER_PLATFORM=${{ matrix.arch}} \
+          --build-arg HOST_ARCHITECTURE=amd64  \
           --cpuset-cpus=0 \
           ci-docker
 
