--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -19,6 +19,9 @@ newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
 indent.ctrlSite = 4
 danglingParentheses.ctrlSite = false
 
+# Default is not recommended
+indentOperator.exemptScope = aloneEnclosed
+
 # default value is 10,000
 # Message about NirGenExpr.scala goes away between 18k and 20k
 runner.optimizer.maxVisitsPerToken = 20000
