--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,7 +3,7 @@
 # settings is preferred over adding especially as
 # the Scala language evolves and styles change.
 # Test upgrades: $ scripts/scalafmt --test 2> diff.txt
-version = "3.0.0-RC6"
+version = "3.4.0"
 docstrings.style = AsteriskSpace
 project.git = true
 project.excludePaths = [
@@ -18,6 +18,9 @@ newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
 # Keep control sites more streamlined
 indent.ctrlSite = 4
 danglingParentheses.ctrlSite = false
+
+# Default is not recommended
+indentOperator.exemptScope = aloneEnclosed
 
 # default value is 10,000
 # Message about NirGenExpr.scala goes away between 18k and 20k
