--- a/.github/workflows/run-jdk-compliance-tests.yml
+++ b/.github/workflows/run-jdk-compliance-tests.yml
@@ -10,7 +10,7 @@ concurrency:
 
 jobs:
   # Compile and run tests against given version of the JDK to check compliance
-  # We test against Java 8 as default in other CI jobs 
+  # We test against Java 8 as default in other CI jobs
   tests-unix-jdk-compliance:
     name: Test JDK compliance
     runs-on: ${{matrix.os}}
@@ -19,7 +19,7 @@ jobs:
       matrix:
         os: [ubuntu-18.04, macos-10.15]
         scala: [3.1.1]
-        java: [11] 
+        java: [11]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -28,11 +28,11 @@ jobs:
           java-version: ${{matrix.java}}
 
       - uses: ./.github/actions/macos-setup-env
-        if: ${{ startsWith(matrix.os, 'macos'}}
+        if: ${{ startsWith(matrix.os, 'macos') }}
         with:
           scala-version: ${{matrix.scala}}
       - uses: ./.github/actions/linux-setup-env
-        if: ${{ startsWith(matrix.os, 'ubuntu'}}
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
         with:
           scala-version: ${{matrix.scala}}
 
