--- a/.github/workflows/run-jdk-compliance-tests.yml
+++ b/.github/workflows/run-jdk-compliance-tests.yml
@@ -12,7 +12,7 @@ jobs:
   # Compile and run tests against given version of the JDK to check compliance
   # We test against Java 8 as default in other CI jobs
   tests-unix-jdk-compliance:
-    name: Test JDK compliance
+    name: Test Unix JDK compliance
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
