Use cmd for Windows CI shell

--- a/.github/workflows/run-jdk-compliance-tests.yml
+++ b/.github/workflows/run-jdk-compliance-tests.yml
@@ -61,6 +61,7 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test runtime
+        shell: cmd
         run: >
           set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
           set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
