Add mising id for Windows setup step

--- a/.github/workflows/run-jdk-compliance-tests.yml
+++ b/.github/workflows/run-jdk-compliance-tests.yml
@@ -57,6 +57,7 @@ jobs:
           distribution: "temurin"
           java-version: ${{matrix.java}}
       - uses: ./.github/actions/windows-setup-env
+        id: setup
         with:
           scala-version: ${{matrix.scala}}
 
