--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -1,10 +1,10 @@
 ARG TARGET_DOCKER_PLATFORM
 
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 RUN apt-get update && apt-get install -y qemu-user-static
 
-FROM $TARGET_DOCKER_PLATFORM/ubuntu:18.04
+FROM $TARGET_DOCKER_PLATFORM/ubuntu:20.04
 
 ARG HOST_ARCHITECTURE
 
@@ -38,7 +38,7 @@ RUN \
   dpkg -i $SBT_INSTALL_FILE && \
   rm $SBT_INSTALL_FILE
 
-RUN apt-get install -y clang-11 zlib1g-dev libgc-dev git
+RUN apt-get install -y clang zlib1g-dev libgc-dev git
 
 ENV LC_ALL "C.UTF-8"
 
