Fix modifiing ingored list file

--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -124,7 +124,8 @@ jobs:
         run: |
           ignoredTestsFile=scala-partest-junit-tests/src/test/resources/${{matrix.scala}}/BlacklistedTests.txt
           if [[ ${{matrix.lto}} == "thin" ]]; then
-            echo "junit/scala/util/SortingTest.scala" >> ${ignoredTestsFile}
+            echo -e "\n" >> ${ignoredTestsFile}
+            echo -e "junit/scala/util/SortingTest.scala\n" >> ${ignoredTestsFile}
           fi
 
       - name: Run tests
