Disable formatting of gyb generated files, update templates to minimalize the diff

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,7 +7,9 @@ version = "3.4.0"
 docstrings.style = AsteriskSpace
 project.git = true
 project.excludePaths = [
-  "glob:**/scalalib/**"
+  "glob:**/scalalib/**",
+  # Files to big to disable formating using directive // format: off
+  "glob:**/nativelib/**/unsafe/Tag.scala"
 ]
 # Default runner.dialect is deprecated now, needs to be explicitly set
 runner.dialect = scala213
