Include target platform when cross-compiling Boehm

--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -8,14 +8,20 @@ RUN apt-get update && apt-get install -y clang lld unzip
 # We cannot easily install dependencies, clone and build zlib and Boehm locally
 RUN git clone https://github.com/madler/zlib /tmp/zlib \
   && cd /tmp/zlib/ \
+  && git checkout v1.2.11 \
   && ./configure \
   && make install prefix=$CROSS_ROOT/${CROSS_TRIPLE}/sysroot \
   && rm -rf /tmp/zlib
 
 RUN git clone https://github.com/ivmai/bdwgc /tmp/bdwgc \
   && cd /tmp/bdwgc/ \
+  && git checkout v8.0.6 \
+  && git clone https://github.com/ivmai/libatomic_ops \
+  && cd libatomic_ops/ \
+  && git checkout v7.6.12 \
+  && cd .. \
   && ./autogen.sh \
-  && ./configure \
+  && ./configure --host $CROSS_TRIPLE \
   && make install prefix=$CROSS_ROOT/${CROSS_TRIPLE}/sysroot \
   && rm -rf /tmp/bdwgc
 
