Also add sysroot lib

--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -108,9 +108,10 @@ jobs:
           crossRoot='${sys.env("CROSS_ROOT")}'
 
           sysrootIncludeFlag="s\"-I$crossRoot/$target/sysroot/include\""
+          sysrootLibFlag="s\"-L$crossRoot/$target/sysroot/lib\""
           sysRootFlag="s\"--sysroot=\${sys.process.stringSeqToProcess(Seq(sys.env(\"CROSS_ROOT\") + \"/bin/\" + sys.env(\"CROSS_TRIPLE\") + \"-gcc\", \"-print-sysroot\")).!!.trim}\""
           useLdFlg=\"-fuse-ld=lld\"
-          crossOptions="List($sysrootIncludeFlag, $sysRootFlag, $useLdFlg)"
+          crossOptions="List($sysrootIncludeFlag, $sysrootLibFlag, $sysRootFlag, $useLdFlg)"
 
           emptyConfig="scalanative.build.NativeConfig.empty"
           withMode="withMode(scalanative.build.Mode.${{matrix.build-mode}})"
