Try without lld

--- a/.github/workflows/run-tests-linux-multiarch.yml
+++ b/.github/workflows/run-tests-linux-multiarch.yml
@@ -111,7 +111,7 @@ jobs:
           sysrootLibFlag="s\"-L$crossRoot/$target/sysroot/lib\""
           sysRootFlag="Some(sys.process.stringSeqToProcess(Seq(sys.env(\"CROSS_ROOT\") + \"/bin/\" + sys.env(\"CROSS_TRIPLE\") + \"-gcc\", \"-print-sysroot\")).!!.trim).filter(_.nonEmpty).map(s => List(s\"--sysroot=\${s}\", s\"--gcc-toolchain=${crossRoot}\")).getOrElse(List.empty)"
           useLdFlg=\"-fuse-ld=lld\"
-          crossOptions="$sysRootFlag ++ List($sysrootIncludeFlag, $sysrootLibFlag, $useLdFlg)"
+          crossOptions="$sysRootFlag ++ List($sysrootIncludeFlag, $sysrootLibFlag)"
 
           emptyConfig="scalanative.build.NativeConfig.empty"
           withMode="withMode(scalanative.build.Mode.${{matrix.build-mode}})"
